
performance improvements:
- increased threshold when to scale up cuts that are generated by nonlinear constraint handlers
- disable disaggregation of quadratic constraints by changing the default for constraints/quadratic/maxdisaggrsize to 1
  (disaggregation can still be very helpful on some instances, but also seems hurtful on others)

features:
- allow output of lower bounds for visualization

new parameters:
- new parameter "visual/displb" that enables output of lower bounds for visualization

deleted and modified parameters:
- rename parameter: "constraints/orbisack/orbisack/coverseparation" to "constraints/orbisack/coverseparation"

fixed bugs:
- fixed wrong cast in LP iteration limit computation in proximity search heuristic
- fixed check for time limit in heur_nlpdiving
- improved numerics and fixed stop criterion in zirounding heuristic


SCIP version 5.0.0
==================

features:
- add new heuristic MPEC that solves a MPEC reformulation of a mixed-binary nonlinear problem by regularized NLP reformulations
- new numerical solution violations get printed when checksol is called
- three bandit selection algorithms to face sequential decision problems under uncertainty
- new primal heuristic ALNS that orchestrates eight different LNS heuristics adaptively
  using algorithms for the multi-armed bandit problem
- added analysis of the clique table which identifies possible aggregations via the search for
  strongly connected components and may detect infeasible assignments on the way
- SCIP can now automatically detect and compute symmetries in MIPs (if a graph automorphism code is linked in)
- added presol_symmetry.c for computing and storing symmetry information of a MIP
- added new propagator orbital fixing
- added cons_symresack.c to handle permutation symmetries in a binary programs via inequalities and propagation
- added cons_orbisack.c to handle special permutation symmetries in a binary programs via inequalities and propagation