@@ -8,6 +8,7 @@ performance improvements:
 
 features:
 - allow output of lower bounds for visualization
+- add number of conflict constraints found by diving heuristics to statistics
 
 new parameters:
 - new parameter "visual/displb" that enables output of lower bounds for visualization
